Update the sidebar image with correct styling
Previously the sidebar image was a basic skeleton that wasn't styled.
This commit puts it in the ideal final state, had to modify the fonts
to achieve this due to a misalignment error.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 @font-face {
     font-family: Norse-Bold;
-    src: url('../fonts/Norse-Bold.otf');
+    src: url('../fonts/norse-bold-webfont.woff2') format('woff2'),
+        url('../fonts/norse-bold-webfont.woff1') format('woff1');
 }
 
 body {
@@ -13,7 +14,9 @@ body {
 }
 
 .form-container {
+    height: 80vh;
     display: flex;
+    gap: 5%;
 }
 
 .form-section {
@@ -29,33 +32,23 @@ body {
 }
 
 .sidebar {
-    position: relative;
-    width: 1000px;
-    background: url(../images/starry-mountains.jpg) no-repeat center/cover;
-}
-
-.sidebar-image {
-    position: absolute;
     width: 100%;
+    background: url(../images/starry-mountains.jpg) no-repeat center/cover;
 }
 
 .sidebar-logo {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: 15vh;
+    height: 20%;
+    background-color: rgba(0, 0, 0, 0.32);
+
     font-family: Norse-Bold;
     color: white;
-
-    position: absolute;
-    top: 20%;
-    height: 20%;
-    width: 100%;
-    background-color: rgba(0, 0, 0, 0.218);
+    font-size: 6.5em;
 }
 
 .logo-image {
-    height: 100%;
-}
-
-.logo-text {
+    height: 85%;
 }
